objects/vlocity_ins__StateTransition__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActivityStatus__c</fullName>
        <inlineHelpText>Open Activities must all be in one of the selected status values in order for the relevant object to progress.</inlineHelpText>
        <label>Status of Open Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Config__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DRStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnabledObjectsAPI__c</fullName>
        <label>Enabled for Objects (API)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case__c</fullName>
                </value>
                <value>
                    <fullName>Incident__c</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__From__c</fullName>
        <label>From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__To__c</fullName>
        <label>To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_ins__From__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>State Transition</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Description__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>vlocity_ins__From__c</columns>
        <columns>vlocity_ins__To__c</columns>
        <columns>vlocity_ins__ActivityStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>